# md-semantic-comparison

./: .gitignore  README.md  compare.py  compare.sh  install_runtime_deps.py  pyproject.toml
